k8s/ghost/stack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: stack-ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5-alpine
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: ghost-storage
              mountPath: /var/lib/ghost/content
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: ghost-storage
          persistentVolumeClaim:
            claimName: ghost-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: stack-ghost
spec:
  selector:
    app: ghost
  ports:
    - port: 80
      targetPort: 2368
